# meson-cpp-boilerplate

./: .gitignore  README.md  meson.build
source/: classA.cc  classA.h  example.cpp  main.cpp  tags
tests/: test.cc
